MentorLink-main/src/Screens/Authentication/Profile.module.css
.profileContainer {
    width: 100vw;
    min-height: 100vh;
    backdrop-filter: blur(5px);
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 20px;
    box-sizing: border-box;
}

.profileCard {
    width: 100%;
    max-width: 600px;
    background: #ffffff;
    border-radius: 16px;
    padding: 30px;
    box-shadow: 0 10px 30px rgba(0,0,0,0.15);
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    gap: 15px;
    text-align: center;
}

.profileCard h2 {
    color: #3b5bdb;
    margin-bottom: 5px;
}

.profileCard h1 {
    font-size: 22px;
    margin-bottom: 15px;
}

/* FORM GRID */
.form {
    display: flex;
    flex-direction: column;
    gap: 15px;
       
}

/* INPUTS */

.form input,
.form select {
    width: 100%;
    padding: 10px;
    border-radius: 8px;
    border: 1px solid #ccc;
    outline: none;
    font-size: 14px;
    transition: 0.2s;
    box-sizing: border-box;
}

.form input:focus,
.form select:focus {
    border-color: #3b5bdb;
    box-shadow: 0 0 10px rgba(59,91,219,0.3);
}



/* FULL WIDTH FIELDS */
.form input[name="email"],
.form input[name="universityName"],
.form button {
    grid-column: span 2;
}

/* BUTTON */
.submitBtn {
    padding: 12px;
    margin-top: 10px;
    border: none;
    border-radius: 8px;
    background: #3b5bdb;
    color: white;
    font-size: 16px;
    cursor: pointer;
    transition: 0.3s;
}

.form button:hover {
    background: #2f49b5;
}

/* RESPONSIVE */
@media (max-width: 600px) {
    .form {
        grid-template-columns: 1fr;
    }

    .form input[name="email"],
    .form input[name="universityName"],
    .form button {
        grid-column: span 1;
    }
}

.wrapper{
    position: relative;
    width: 100%;
}
.input-heading{
    text-align: start;
    margin-bottom: 0;
   color: #374151;
    padding-left: 0.5vmin;
}
.inputDiv{
    display: flex;
    flex-direction: column;
    gap: 6px;
}

